# AEGIS---AI-Evaluation-and-Guard-Intelligence-System

./: .gitignore  AI_RedTeaming_Architecture.md  DEPLOYMENT_COMPLETE.md  FINAL_FIX_SUMMARY.md  FIX_REPORT.md  IMPLEMENTATION_COMPLETE.md  README.md  USER_GUIDE.md  aegis_gradio_app.py  ai_red_teaming_system.ipynb  gradio_requirements.txt  lm_studio_enhancement.py  lm_studio_integration.ipynb  push_to_github.bat  push_to_github.sh  pyproject.toml  quick_start_example.py  requirements.txt  requirements_extended.txt  setup.py  test_basic_functionality.py  verify_aegis_complete.py  verify_aegis_installation.py
aegis/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  api.py  cli.py
aegis/config/: __init__.py  config.yaml  defaults.yaml
aegis/core/: __init__.py  attacker.py  base.py  defender.py  judge.py  orchestrator.py
aegis/evaluation/: __init__.py  base.py  evaluator.py  generator.py  library.py
aegis/evaluation/targets/: __init__.py  chain_of_thought.py  data_exfiltration.py  deception.py  evaluation_awareness.py  hidden_motivations.py  reward_hacking.py  sabotage.py  sandbagging.py  tool_use.py
aegis/modules/: adversarial_prompt_generator.py  dataset_loader.py  uncensored_model_loader.py
aegis/providers/: __init__.py  base.py  factory.py  lmstudio.py
aegis/utils/: __init__.py  data_structures.py  helpers.py
examples/: README.md  __init__.py  advanced_example.py  basic_example.py
tests/: __init__.py  conftest.py
